chore: configure the mirrornodeGrpc property for modules
Signed-off-by: Manish Dait <daitmanish88@gmail.com>